errors



/usr/bin/g++ -fdiagnostics-color=always -g '/home/ysa306/Desktop/ans 2/TestBiMap.cpp' -o '/home/ysa306/Desktop/ans 2/TestBiMap'
In file included from /home/ysa306/Desktop/ans 2/TestBiMap.cpp:2:
/home/ysa306/Desktop/ans 2/BiMap.h: In instantiation of ‘const KeyType& BiMap<KeyType, ValType>::getKey(const ValType&) const [with KeyType = std::__cxx11::basic_string<char>; ValType = int]’:
/home/ysa306/Desktop/ans 2/TestBiMap.cpp:29:45:   required from here
/home/ysa306/Desktop/ans 2/BiMap.h:87:62: error: invalid initialization of reference of type ‘const std::__cxx11::basic_string<char>&’ from expression of type ‘const int’
   87 |         return valToKeyTable[findPosVal(val, valToKeyTable)].key; // Fixed incorrect return
      |                ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~
/home/ysa306/Desktop/ans 2/BiMap.h: In instantiation of ‘bool BiMap<KeyType, ValType>::removeVal(const ValType&) [with KeyType = std::__cxx11::basic_string<char>; ValType = int]’:
/home/ysa306/Desktop/ans 2/TestBiMap.cpp:37:20:   required from here
/home/ysa306/Desktop/ans 2/BiMap.h:73:45: error: conversion from ‘int’ to non-scalar type ‘std::__cxx11::basic_string<char>’ requested
   73 |         KeyType key = valToKeyTable[valPos].key; // Fixed incorrect assignment
      |                       ~~~~~~~~~~~~~~~~~~~~~~^~~
/home/ysa306/Desktop/ans 2/BiMap.h: In instantiation of ‘int BiMap<KeyType, ValType>::findPosKey(const KeyType&, const std::vector<BiMap<KeyType, ValType>::HashEntry>&) const [with KeyType = std::__cxx11::basic_string<char>; ValType = int]’:
/home/ysa306/Desktop/ans 2/BiMap.h:42:22:   required from ‘bool BiMap<KeyType, ValType>::insert(const KeyType&, const ValType&) [with KeyType = std::__cxx11::basic_string<char>; ValType = int]’
/home/ysa306/Desktop/ans 2/TestBiMap.cpp:10:17:   required from here
/home/ysa306/Desktop/ans 2/BiMap.h:121:32: error: no matching function for call to ‘BiMap<std::__cxx11::basic_string<char>, int>::rehash(const std::__cxx11::basic_string<char>&, std::vector<BiMap<std::__cxx11::basic_string<char>, int>::HashEntry, std::allocator<BiMap<std::__cxx11::basic_string<char>, int>::HashEntry> >::size_type) const’
  121 |         int currentPos = rehash(key, table.size());
      |                          ~~~~~~^~~~~~~~~~~~~~~~~~~
/home/ysa306/Desktop/ans 2/BiMap.h:143:10: note: candidate: ‘void BiMap<KeyType, ValType>::rehash() [with KeyType = std::__cxx11::basic_string<char>; ValType = int]’
  143 |     void rehash() {
      |          ^~~~~~
/home/ysa306/Desktop/ans 2/BiMap.h:143:10: note:   candidate expects 0 arguments, 2 provided
/home/ysa306/Desktop/ans 2/BiMap.h: In instantiation of ‘int BiMap<KeyType, ValType>::findPosVal(const ValType&, const std::vector<BiMap<KeyType, ValType>::ReverseHashEntry>&) const [with KeyType = std::__cxx11::basic_string<char>; ValType = int]’:
/home/ysa306/Desktop/ans 2/BiMap.h:43:22:   required from ‘bool BiMap<KeyType, ValType>::insert(const KeyType&, const ValType&) [with KeyType = std::__cxx11::basic_string<char>; ValType = int]’
/home/ysa306/Desktop/ans 2/TestBiMap.cpp:10:17:   required from here
/home/ysa306/Desktop/ans 2/BiMap.h:133:32: error: no matching function for call to ‘BiMap<std::__cxx11::basic_string<char>, int>::rehash(const int&, std::vector<BiMap<std::__cxx11::basic_string<char>, int>::ReverseHashEntry, std::allocator<BiMap<std::__cxx11::basic_string<char>, int>::ReverseHashEntry> >::size_type) const’
  133 |         int currentPos = rehash(val, table.size());
      |                          ~~~~~~^~~~~~~~~~~~~~~~~~~
/home/ysa306/Desktop/ans 2/BiMap.h:143:10: note: candidate: ‘void BiMap<KeyType, ValType>::rehash() [with KeyType = std::__cxx11::basic_string<char>; ValType = int]’
  143 |     void rehash() {
      |          ^~~~~~
/home/ysa306/Desktop/ans 2/BiMap.h:143:10: note:   candidate expects 0 arguments, 2 provided
